# SapphireAI

./: .envrc  .envrc.example  .eslintrc.cjs  .firebaserc  .gcloudignore  .gemini_placeholder  .git-secrets-patterns  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_OPTIMIZATIONS.md  ARCHITECTURE.md  ARCHITECTURE_2.0.md  ARCHITECTURE_DOCUMENTATION.md  ASTER_API_WHITELIST_IPS.md  ASTER_CREDENTIALS_README.md  AUDIT_REPORT.md  BOTH_METHODS_GUIDE.md  BOT_DEVELOPMENT_GUIDE.md  BUILD_SUCCESS_ANALYSIS.md  COMPETITION_NARRATIVE.md  COMPLETE_SUCCESS_SUMMARY.md  CONTRIBUTING.md  COST_BUDGET_ANALYSIS.md  CREDENTIALS_CONFIGURED.md  DATABASE_CONFIG_FIX_PLAN.md  DEPLOYMENT_AND_DNS_STATUS.md  DEPLOYMENT_BREAKTHROUGH.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX_PLAN.md  DEPLOYMENT_ISSUES_SUMMARY.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_READINESS_AUDIT.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_TEST_REPORT.md  DEPLOY_FIRST_AGENT.md  DNS_FIREBASE_VERIFICATION.md  (+278 more)
.cursor/plans/: sapphire-2-0-mlops-vpin-integration-13323f0b.plan.md
.gcp/: build-workflow.sh  cloudbuild.yaml
.github/: README.md  description.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  firebase-hosting.yml
cloud-trader-dashboard/: .eslintrc.cjs  Dockerfile  cloudbuild.yaml  env.example  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  url-map-fixed.yaml  vite.config.ts  vitest.config.ts
cloud-trader-dashboard/src/: App.js  App.tsx  firebase.d.ts  firebase.js  firebase.ts  index.css
cloud_trader/: AsterHFTStrategy.py  Dockerfile  README.md  __init__.py  adaptive_position_sizing.py  adaptive_tpsl.py  advanced_risk_management.py  agent_consensus.py  agent_memory.py  agent_performance.py  agent_performance_auto_adjust.py  ai_analyzer.py  analysis_engine.py  analytics.py  anomaly_detection.py  api.py  api_secrets.py  api_social_endpoints.py  arbitrage.py  backtest.py  basic_server.py  bigquery_exporter.py  bigquery_streaming.py  cache.py  chat_bot.py  chat_logger.py  chat_service.py  circuit_breaker.py  client.py  compliance_audit.py  config.py  credentials.py  daily_strategy_report.py  data_collector.py  data_pipeline.py  definitions.py  diagnostic_auth.py  elastic_vpin_service.py  enhanced_telegram.py  enums.py  (+85 more)
cloud_trader/agents/: vpin_hft_agent.py
cloud_trader/analytics/: performance.py
cloud_trader/backtest/: __init__.py  agents.py  data_loader.py  engine.py
cloud_trader/data/: __init__.py  feature_pipeline.py  historical_data.py
cloud_trader/database/: __init__.py  models_advanced.py
cloud_trader/optimization/: bandit.py  optuna_runner.py  trailing.py
cloud_trader/orchestrator/: __init__.py  app.py  client.py  risk.py  schemas.py
cloud_trader/prompt_config/: __init__.py  prompt_versions.yaml
cloud_trader/prompt_templates/: __init__.py
cloud_trader/training/: __init__.py  configs.py  dataset.py  deepseek_train.py  fingpt_train.py  lagllama_train.py  qwen_train.py  requirements.txt  trainer.py
config/: freqtrade_config.json
dashboards/: pnl_panel.py
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MIT_IMPLEMENTATION.md  MULTI_AGENT_FEATURES.md  README.md  REDIS_MIGRATION_NOTES.md  SECURITY_CLEANUP.md  SQLALCHEMY_METADATA_RULE.md  SYMPHONY_SETUP.md  TECHNICAL_SPECIFICATION.md  load_balancer_design.md  rollout_plan.md  security_review.md
docs/guides/: DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  QUICK_REFERENCE.md  TROUBLESHOOTING_GUIDE.md
docs/monitoring/: SETUP.md
helm/sapphire-trading-system/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/trading-system/: Chart.yaml  values-agents.yaml  values-core.yaml  values-emergency-minimal.yaml  values-grok.yaml  values-infra.yaml  (+2 more)
hyperliquid_trader/: Dockerfile  enhanced_telegram.py  requirements.txt  service.py
infra/: cloudbuild-cloud-trader-fixed.yaml  cloudbuild-cloud-trader.yaml
infrastructure/: deploy_vertex_endpoints.sh
models/: __init__.py
notebooks/: feature_exploration.md  pnl_trace.md
risk-orchestrator/: Dockerfile  env.example  pyproject.toml
risk-orchestrator/src/risk_orchestrator/: __init__.py  aster_client.py  config.py  main.py  models.py  pubsub_client.py  redis_client.py  risk_engine.py  utils.py
risk-orchestrator/src/risk_orchestrator/mcp/: __init__.py  consensus.py  manager.py  router.py  schemas.py
risk-orchestrator/tests/: test_risk_engine.py
scripts/: auto_monitor.sh  build_image_only.sh  check_build_status.sh  cleanup-git-history.sh  cleanup-old-builds.sh  deploy-agents-incrementally.sh  deploy_and_test.sh  deploy_cloud_trader_rapid.sh  deploy_prompt_engineering.sh  enable-all-agents.sh  evaluate_prompts.py  health-check-all.sh  monitor-build-and-start-trading.sh  monitor-deployment.sh  monitor-suspicious-activity.sh  monitor_and_deploy.sh  monitor_build_and_deploy.sh  pre_deployment_check.sh  pre_deployment_check_optimizations.sh  rotate-credentials.sh  setup-security-hooks.sh  start-live-trading.sh  start_monitoring.sh  stop_monitoring.sh  sync-gcp-secrets-to-k8s.sh  update_aster_credentials.sh  validate_prompt_implementation.py  verify-deployment.sh  verify-live-trading-final.sh  verify-live-trading-status.sh  verify-live-trading.sh
symphony_conductor/: Dockerfile  main.py
symphony_lib/: __init__.py  models.py  pubsub.py
terraform/: pubsub.tf  sapphire_infrastructure.tf  sapphire_services.tf  terraform.tfvars  tfplan  vertex_ai.tf
tests/: test_ai_inference_integration.py  test_enhanced_telegram.py  test_multi_agent_thesis.py  test_prompt_engineering.py  test_risk_manager.py  test_trading_flow.py
tools/: close_all_positions.py
trading-dashboard/: .firebaserc  .firebaserc.backup  Dockerfile  README.md  comprehensive_test.sh  firebase.json  firestore.rules  index.html  monitor_deployment.sh  monitor_infrastructure.sh  package.json  telegram-secrets.yaml  vite.config.ts
venv311/: pyvenv.cfg
(+366 files in other folders)
