[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-trader"
version = "0.1.0"
description = "Lean cloud-native cryptocurrency trading service for Aster DEX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "google-cloud-secret-manager>=2.16.0",
    "redis>=5.0.3",
    "httpx>=0.26.0",
    "orjson>=3.10.7",
    "prometheus-fastapi-instrumentator>=6.0.0",
]

[project.optional-dependencies]
analytics = [
    "feast>=0.44.1",
    "sentence-transformers>=2.6.1",
    "optuna>=3.6.1",
    "panel>=1.4.4",
    "plotly>=5.22.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rari-trade"
Repository = "https://github.com/yourusername/rari-trade"
Documentation = "https://rari-trade.readthedocs.io/"
Issues = "https://github.com/yourusername/rari-trade/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud_trader*"]



[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | rari_trade_env
  | rari_trade_env_fresh
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["cloud_trader"]
skip = ["__pycache__"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "rari_trade_env",
    "rari_trade_env_fresh",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["cloud_trader"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
